--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="site.webmanifest" />
+  <meta name="robots" content="noindex">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
