--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <link rel="manifest" href="site.webmanifest" />
   <meta name="robots" content="noindex, nofollow">
   <title>Document</title>
+  <link rel="shortcut icon" type="image/x-ico" href="/favicon.ico"/>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <section>
-    <a href="#">Web en desarrollo</a>
+    <h4>Web en desarrollo</h4>
+    <p>por Andreu Julià</p>
   </section>
 </body>
 </html>
